# comfyui-anthropic-claude

./: LICENSE  README.md  __init__.py  anthropic_claude_node.py  getting-started.md  history_manager.py  node_list.json  pyproject.toml  troubleshooting.md  usage.md
.github/workflows/: validate.yml
docs/: getting-started.md  troubleshooting.md  usage.md
js/: anthropic_claude_ui.js
templates/: flux.md  flux_edit.md  gpt_image_2.md  gpt_image_2_edit.md  grok.md  grok_edit.md  ideogram.md  kling_2-1_2-5.md  kling_2-6.md  kling_2-6_mc.md  kling_avatar.md  kling_o1.md  kling_o3.md  kling_v3.md  ltx2pro.md  ltx_2-3.md  luma.md  luma_3-14.md  minimax.md  nano_banana_2.md  nano_banana_2_edit.md  nano_banana_pro.md  nano_banana_pro_edit.md  pika.md  qwen_edit.md  qwen_image.md  runway.md  runway_edit.md  seedance_1_1-5.md  seedance_2.md  seedance_2_edit.md  seedream.md  seedream_5_lite.md  seedream_5_lite_edit.md  seedream_edit.md  sora.md  sora_edit.md  veo.md  wan_2-1_2-2.md  wan_2-5_2-6.md  (+1 more)
