[project]
name = "anthropic-claude"
description = "ComfyUI custom node for calling the Anthropic Claude API with text and image inputs."
version = "1.5.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["anthropic>=0.40.0"]

[project.urls]
Repository = "https://github.com/alexmunteanu/comfyui-anthropic-claude"

[tool.comfy]
PublisherId = "alexmunteanu"
DisplayName = "Anthropic Claude"
Icon = "https://raw.githubusercontent.com/alexmunteanu/comfyui-anthropic-claude/main/icon.png"
Banner = "https://raw.githubusercontent.com/alexmunteanu/comfyui-anthropic-claude/main/banner.png"
