[project]
name = "anthropic-claude"
description = "A ComfyUI node that uses Claude to generate optimized prompts for 25+ image and video models. 31 built-in templates for FLUX, Runway, Kling, Veo, Wan, Luma, Seedance, Qwen, Nano Banana, and others."
version = "1.5.14"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["anthropic>=0.40.0"]

[project.urls]
Repository = "https://github.com/alexmunteanu/comfyui-anthropic-claude"

[tool.comfy]
PublisherId = "alexmunteanu"
DisplayName = "Anthropic Claude"
Icon = "https://raw.githubusercontent.com/alexmunteanu/comfyui-anthropic-claude/main/icon.png"
Banner = "https://raw.githubusercontent.com/alexmunteanu/comfyui-anthropic-claude/main/banner.png"
